src/agentspeak_parser/agentspeak_parser.output
Grammar

    0 $accept: agent "end of file"

    1 agent: beliefs initial_goal plans "end of file"
    2      | beliefs plans "end of file"

    3 beliefs: /* empty */
    4        | beliefs literal '.'

    5 literal: "atom" '(' terms ')'
    6        | "atom"

    7 terms: /* empty */
    8      | term
    9      | terms ',' term

   10 term: literal
   11     | "variable"
   12     | "unnamed variable"
   13     | "number"
   14     | "string literal"

   15 initial_goal: '!' literal '.'

   16 plans: plan
   17      | plans plan

   18 plan: trigger ':' context "<-" body '.'

   19 trigger: percept
   20        | '+' goal
   21        | '-' goal

   22 goal: '!' literal
   23     | "!!" literal
   24     | '?' literal

   25 percept: '+' literal
   26        | '-' literal

   27 context: "true"
   28        | conditions

   29 conditions: condition
   30           | conditions '&' condition

   31 condition: "not" literal
   32          | "not" '(' literal ')'
   33          | literal

   34 body: "true"
   35     | formulas

   36 formulas: formula
   37         | formulas ';' formula

   38 formula: action
   39        | assignment
   40        | goal
   41        | percept

   42 action: literal

   43 assignment: "variable" '=' literal


Terminals, with rules where they appear

"end of file" (0) 0 1 2
'!' (33) 15 22
'&' (38) 30
'(' (40) 5 32
')' (41) 5 32
'+' (43) 20 25
',' (44) 9
'-' (45) 21 26
'.' (46) 4 15 18
':' (58) 18
';' (59) 37
'=' (61) 43
'?' (63) 24
error (256)
"variable" (258) 11 43
"unnamed variable" (259) 12
"atom" (260) 5 6
"string literal" (261) 14
"number" (262) 13
"true" (263) 27 34
"!!" (264) 23
"<-" (265) 18
"not" (266) 31 32


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
agent (25)
    on left: 1 2, on right: 0
beliefs (26)
    on left: 3 4, on right: 1 2 4
literal (27)
    on left: 5 6, on right: 4 10 15 22 23 24 25 26 31 32 33 42 43
terms (28)
    on left: 7 8 9, on right: 5 9
term (29)
    on left: 10 11 12 13 14, on right: 8 9
initial_goal (30)
    on left: 15, on right: 1
plans (31)
    on left: 16 17, on right: 1 2 17
plan (32)
    on left: 18, on right: 16 17
trigger (33)
    on left: 19 20 21, on right: 18
goal (34)
    on left: 22 23 24, on right: 20 21 40
percept (35)
    on left: 25 26, on right: 19 41
context (36)
    on left: 27 28, on right: 18
conditions (37)
    on left: 29 30, on right: 28 30
condition (38)
    on left: 31 32 33, on right: 29 30
body (39)
    on left: 34 35, on right: 18
formulas (40)
    on left: 36 37, on right: 35 37
formula (41)
    on left: 38 39 40 41, on right: 36 37
action (42)
    on left: 42, on right: 38
assignment (43)
    on left: 43, on right: 39


state 0

    0 $accept: . agent "end of file"

    $default  reduce using rule 3 (beliefs)

    agent    go to state 1
    beliefs  go to state 2


state 1

    0 $accept: agent . "end of file"

    "end of file"  shift, and go to state 3


state 2

    1 agent: beliefs . initial_goal plans "end of file"
    2      | beliefs . plans "end of file"
    4 beliefs: beliefs . literal '.'

    "atom"  shift, and go to state 4
    '!'     shift, and go to state 5
    '+'     shift, and go to state 6
    '-'     shift, and go to state 7

    literal       go to state 8
    initial_goal  go to state 9
    plans         go to state 10
    plan          go to state 11
    trigger       go to state 12
    percept       go to state 13


state 3

    0 $accept: agent "end of file" .

    $default  accept


state 4

    5 literal: "atom" . '(' terms ')'
    6        | "atom" .

    '('  shift, and go to state 14

    $default  reduce using rule 6 (literal)


state 5

   15 initial_goal: '!' . literal '.'

    "atom"  shift, and go to state 4

    literal  go to state 15


state 6

   20 trigger: '+' . goal
   25 percept: '+' . literal

    "atom"  shift, and go to state 4
    "!!"    shift, and go to state 16
    '!'     shift, and go to state 17
    '?'     shift, and go to state 18

    literal  go to state 19
    goal     go to state 20


state 7

   21 trigger: '-' . goal
   26 percept: '-' . literal

    "atom"  shift, and go to state 4
    "!!"    shift, and go to state 16
    '!'     shift, and go to state 17
    '?'     shift, and go to state 18

    literal  go to state 21
    goal     go to state 22


state 8

    4 beliefs: beliefs literal . '.'

    '.'  shift, and go to state 23


state 9

    1 agent: beliefs initial_goal . plans "end of file"

    '+'  shift, and go to state 6
    '-'  shift, and go to state 7

    plans    go to state 24
    plan     go to state 11
    trigger  go to state 12
    percept  go to state 13


state 10

    2 agent: beliefs plans . "end of file"
   17 plans: plans . plan

    "end of file"  shift, and go to state 25
    '+'            shift, and go to state 6
    '-'            shift, and go to state 7

    plan     go to state 26
    trigger  go to state 12
    percept  go to state 13


state 11

   16 plans: plan .

    $default  reduce using rule 16 (plans)


state 12

   18 plan: trigger . ':' context "<-" body '.'

    ':'  shift, and go to state 27


state 13

   19 trigger: percept .

    $default  reduce using rule 19 (trigger)


state 14

    5 literal: "atom" '(' . terms ')'

    "variable"          shift, and go to state 28
    "unnamed variable"  shift, and go to state 29
    "atom"              shift, and go to state 4
    "string literal"    shift, and go to state 30
    "number"            shift, and go to state 31

    $default  reduce using rule 7 (terms)

    literal  go to state 32
    terms    go to state 33
    term     go to state 34


state 15

   15 initial_goal: '!' literal . '.'

    '.'  shift, and go to state 35


state 16

   23 goal: "!!" . literal

    "atom"  shift, and go to state 4

    literal  go to state 36


state 17

   22 goal: '!' . literal

    "atom"  shift, and go to state 4

    literal  go to state 37


state 18

   24 goal: '?' . literal

    "atom"  shift, and go to state 4

    literal  go to state 38


state 19

   25 percept: '+' literal .

    $default  reduce using rule 25 (percept)


state 20

   20 trigger: '+' goal .

    $default  reduce using rule 20 (trigger)


state 21

   26 percept: '-' literal .

    $default  reduce using rule 26 (percept)


state 22

   21 trigger: '-' goal .

    $default  reduce using rule 21 (trigger)


state 23

    4 beliefs: beliefs literal '.' .

    $default  reduce using rule 4 (beliefs)


state 24

    1 agent: beliefs initial_goal plans . "end of file"
   17 plans: plans . plan

    "end of file"  shift, and go to state 39
    '+'            shift, and go to state 6
    '-'            shift, and go to state 7

    plan     go to state 26
    trigger  go to state 12
    percept  go to state 13


state 25

    2 agent: beliefs plans "end of file" .

    $default  reduce using rule 2 (agent)


state 26

   17 plans: plans plan .

    $default  reduce using rule 17 (plans)


state 27

   18 plan: trigger ':' . context "<-" body '.'

    "atom"  shift, and go to state 4
    "true"  shift, and go to state 40
    "not"   shift, and go to state 41

    literal     go to state 42
    context     go to state 43
    conditions  go to state 44
    condition   go to state 45


state 28

   11 term: "variable" .

    $default  reduce using rule 11 (term)


state 29

   12 term: "unnamed variable" .

    $default  reduce using rule 12 (term)


state 30

   14 term: "string literal" .

    $default  reduce using rule 14 (term)


state 31

   13 term: "number" .

    $default  reduce using rule 13 (term)


state 32

   10 term: literal .

    $default  reduce using rule 10 (term)


state 33

    5 literal: "atom" '(' terms . ')'
    9 terms: terms . ',' term

    ')'  shift, and go to state 46
    ','  shift, and go to state 47


state 34

    8 terms: term .

    $default  reduce using rule 8 (terms)


state 35

   15 initial_goal: '!' literal '.' .

    $default  reduce using rule 15 (initial_goal)


state 36

   23 goal: "!!" literal .

    $default  reduce using rule 23 (goal)


state 37

   22 goal: '!' literal .

    $default  reduce using rule 22 (goal)


state 38

   24 goal: '?' literal .

    $default  reduce using rule 24 (goal)


state 39

    1 agent: beliefs initial_goal plans "end of file" .

    $default  reduce using rule 1 (agent)


state 40

   27 context: "true" .

    $default  reduce using rule 27 (context)


state 41

   31 condition: "not" . literal
   32          | "not" . '(' literal ')'

    "atom"  shift, and go to state 4
    '('     shift, and go to state 48

    literal  go to state 49


state 42

   33 condition: literal .

    $default  reduce using rule 33 (condition)


state 43

   18 plan: trigger ':' context . "<-" body '.'

    "<-"  shift, and go to state 50


state 44

   28 context: conditions .
   30 conditions: conditions . '&' condition

    '&'  shift, and go to state 51

    $default  reduce using rule 28 (context)


state 45

   29 conditions: condition .

    $default  reduce using rule 29 (conditions)


state 46

    5 literal: "atom" '(' terms ')' .

    $default  reduce using rule 5 (literal)


state 47

    9 terms: terms ',' . term

    "variable"          shift, and go to state 28
    "unnamed variable"  shift, and go to state 29
    "atom"              shift, and go to state 4
    "string literal"    shift, and go to state 30
    "number"            shift, and go to state 31

    literal  go to state 32
    term     go to state 52


state 48

   32 condition: "not" '(' . literal ')'

    "atom"  shift, and go to state 4

    literal  go to state 53


state 49

   31 condition: "not" literal .

    $default  reduce using rule 31 (condition)


state 50

   18 plan: trigger ':' context "<-" . body '.'

    "variable"  shift, and go to state 54
    "atom"      shift, and go to state 4
    "true"      shift, and go to state 55
    "!!"        shift, and go to state 16
    '!'         shift, and go to state 17
    '+'         shift, and go to state 56
    '-'         shift, and go to state 57
    '?'         shift, and go to state 18

    literal     go to state 58
    goal        go to state 59
    percept     go to state 60
    body        go to state 61
    formulas    go to state 62
    formula     go to state 63
    action      go to state 64
    assignment  go to state 65


state 51

   30 conditions: conditions '&' . condition

    "atom"  shift, and go to state 4
    "not"   shift, and go to state 41

    literal    go to state 42
    condition  go to state 66


state 52

    9 terms: terms ',' term .

    $default  reduce using rule 9 (terms)


state 53

   32 condition: "not" '(' literal . ')'

    ')'  shift, and go to state 67


state 54

   43 assignment: "variable" . '=' literal

    '='  shift, and go to state 68


state 55

   34 body: "true" .

    $default  reduce using rule 34 (body)


state 56

   25 percept: '+' . literal

    "atom"  shift, and go to state 4

    literal  go to state 19


state 57

   26 percept: '-' . literal

    "atom"  shift, and go to state 4

    literal  go to state 21


state 58

   42 action: literal .

    $default  reduce using rule 42 (action)


state 59

   40 formula: goal .

    $default  reduce using rule 40 (formula)


state 60

   41 formula: percept .

    $default  reduce using rule 41 (formula)


state 61

   18 plan: trigger ':' context "<-" body . '.'

    '.'  shift, and go to state 69


state 62

   35 body: formulas .
   37 formulas: formulas . ';' formula

    ';'  shift, and go to state 70

    $default  reduce using rule 35 (body)


state 63

   36 formulas: formula .

    $default  reduce using rule 36 (formulas)


state 64

   38 formula: action .

    $default  reduce using rule 38 (formula)


state 65

   39 formula: assignment .

    $default  reduce using rule 39 (formula)


state 66

   30 conditions: conditions '&' condition .

    $default  reduce using rule 30 (conditions)


state 67

   32 condition: "not" '(' literal ')' .

    $default  reduce using rule 32 (condition)


state 68

   43 assignment: "variable" '=' . literal

    "atom"  shift, and go to state 4

    literal  go to state 71


state 69

   18 plan: trigger ':' context "<-" body '.' .

    $default  reduce using rule 18 (plan)


state 70

   37 formulas: formulas ';' . formula

    "variable"  shift, and go to state 54
    "atom"      shift, and go to state 4
    "!!"        shift, and go to state 16
    '!'         shift, and go to state 17
    '+'         shift, and go to state 56
    '-'         shift, and go to state 57
    '?'         shift, and go to state 18

    literal     go to state 58
    goal        go to state 59
    percept     go to state 60
    formula     go to state 72
    action      go to state 64
    assignment  go to state 65


state 71

   43 assignment: "variable" '=' literal .

    $default  reduce using rule 43 (assignment)


state 72

   37 formulas: formulas ';' formula .

    $default  reduce using rule 37 (formulas)
